tls-origination/se-vs.yaml
---
apiVersion: networking.istio.io/v1beta1
kind: ServiceEntry
metadata:
  name: iwin-au-prod
  namespace: au-prod01-mesh-offers
spec:
  hosts:
  - *.aunziwin.com # precise value ticketless-api.aunziwin.com
  location: MESH_EXTERNAL
  ports:
  - name: http-port
    number: 80
    protocol: HTTP
  - name: https
    number: 443
    protocol: HTTPS
  resolution: DNS

---
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
  name: iwin-au-prod
  namespace: au-prod01-mesh-offers
spec:
  hosts:
  - *.aunziwin.com
  http:
  - match:
    - port: 80
    route:
    - destination:
        host: *.aunziwin.com
        port:
          number: 443
        subset: tls-origination
