tls-origination/tls-1-test.yaml
---
apiVersion: networking.istio.io/v1beta1
kind: ServiceEntry
metadata:
  name: talant-test
  namespace: dev-tools
spec:
  hosts:
  - ticketless-api.talant.com # precise domain ticketless-api.talant.com
  location: MESH_EXTERNAL
  ports:
  - name: http-port
    number: 80
    protocol: HTTP
  - name: https
    number: 443
    protocol: HTTPS
  resolution: DNS

---
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
  name: talant-test
  namespace: dev-tools
spec:
  hosts:
  - ticketless-api.talant.com
  http:
  - match:
    - port: 80
    route:
    - destination:
        host: ticketless-api.talant.com # precise domain ticketless-api.talant.com
        port:
          number: 443
        subset: tls-origination
---
kind: DestinationRule
metadata:
  name: talant-test
  namespace: dev-tools
spec:
  host: ticketless-api.talant.com
  subsets:
  - name: tls-origination
    trafficPolicy:
      loadBalancer:
        simple: ROUND_ROBIN
      portLevelSettings:
      - port:
          number: 443
        tls:
          mode: SIMPLE
          sni: '*.talant.com'
